Fix button align in Firefox

--- a/src/web/views/dashboard/sections/YourDesk/deskCases/styles.module.css
+++ b/src/web/views/dashboard/sections/YourDesk/deskCases/styles.module.css
@@ -15,7 +15,6 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  justify-content: space-between;
 }
 
 .deskCasesChartButtonActive {
